# hydra

./: README.md
hydra-client/: package-lock.json  package.json
hydra-client/src/: fonts.ts
hydra-client/src/app/: globals.css  layout.tsx  page.tsx
hydra-client/src/app/(identity)/setup/: page.tsx
hydra-client/src/app/(messenger)/: layout.tsx
hydra-client/src/app/(messenger)/chat/: page.tsx
hydra-client/src/app/(messenger)/profile/: page.tsx
hydra-client/src/app/chat/: page.tsx
hydra-client/src/app/login/: page.tsx
hydra-client/src/features/auth/api/: auth.api.ts
hydra-client/src/providers/: IdentityProvider.tsx  ReactQueryProvider.tsx
hydra-client/src/shared/components/: particle-network.tsx
hydra-core/: .gitignore  Cargo.toml
hydra-core/src/: app.rs  cli.rs  docs.rs  main.rs  router.rs  state.rs
hydra-core/src/auth/: challenge.rs  jwt.rs  mod.rs  register.rs
hydra-core/src/crypto/: mod.rs  random.rs
hydra-core/src/crypto/encoding/: base58.rs
hydra-core/src/crypto/mnemonic/: bip39.rs
hydra-core/src/crypto/signature/: verify.rs
hydra-core/src/identity/: user_id.rs
hydra-core/src/models/: device.rs  user.rs
hydra-core/src/tests/: mod.rs  ping.rs  register.rs
hydra-core/src/tests/common/: mod.rs
hydra-core/src/websocket/: connection.rs  mod.rs  protocol.rs  router.rs  upgrade.rs
hydra-core/src/websocket/authentication/: auth_status.rs  challenge.rs  mod.rs  ping.rs  verify.rs
hydra-core/src/websocket/handlers/: interface.rs  mod.rs  ping.rs
hydra-core/src/websocket/user/: get.rs  mod.rs  search.rs  update.rs
(+46 files in other folders)
