[package]
name = "hydra-core"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["ws"] }
bip39 = "2.2.2"
bs58 = "0.5.1"
getrandom = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
surrealdb = { version = "3.2.0", features = ["kv-mem"] }
tokio = { version = "1.52.3", features = ["full"] }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
clap = { version = "4.6.1", features = ["derive"] }
figlet-rs = "1.0.0"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tower-http = { version = "0.6", features = ["cors"] }
ed25519-dalek = "3.0.0"
serde_json = "1"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
